--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,9 @@
   <meta charset="utf-8">
   <title>viz</title>
   <script src="https://unpkg.com/viz.js@2.1.2/viz.js"></script>
+	
   <script src="https://unpkg.com/viz.js@2.1.2/full.render.js"></script>
+	<script src="https://unpkg.com/ace-builds@1.4.3/src/ace.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
   <style>
@@ -19,6 +21,12 @@
 		</style>
 </head>
 <body>
+	
+	<div id="editor">some text</div>
+
+<script>
+    var editor = ace.edit("editor");
+</script>
 	
 	<textarea id="dotText">digraph { hello -> world; }</textarea>
 <br>
