CSS for ace editor

--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,12 @@
 		max-width:32rem;
     margin:1rem auto;
 		}
-		
+		#editor {
+    position: absolute;
+    width: 500px;
+    height: 400px;
+}
+textarea {width:100%;}
 		</style>
 </head>
 <body>
