--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,10 @@
 		}
 		#editor {
     position: absolute;
-    width: 100%;
-    height: 400px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 textarea {width:100%;}
 		</style>
