--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <html><head>
   <meta charset="utf-8">
   <title>pont</title>
+  <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.js"></script>
   <script src="https://unpkg.com/viz.js@2.1.2/viz.js"></script>
 	
   <script src="https://unpkg.com/viz.js@2.1.2/full.render.js"></script>
@@ -15,26 +16,16 @@
 		max-width:32rem;
     margin:1rem auto;
 		}
-		#editor {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
+		
 textarea {width:100%;}
 		</style>
 </head>
 <body>
 	
-	<div id="editor">some text</div>
-<script src="https://unpkg.com/ace-builds@1.4.3/src/ace.js"></script>
-<script>
-    var editor = ace.edit("editor");
-</script>
-	
 	<textarea id="dotText">digraph { hello -> world; }</textarea>
 <br>
+
+<div id="render"></div>
   <script>
   
   var viz = new Viz();
@@ -48,6 +39,7 @@ function changeEventHandler(event) {
     viz.renderSVGElement(document.getElementById("dotText").value)
     .then(function(element) {
       document.body.appendChild(element);
+      document.getElementById("render").replaceWith(element);
     });
 }
 	</script>
